# tourist

./: .travis.yml  Cargo.toml  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
data/: empty-tour.tour
repl/: tourist.py
src/: config.rs  error.rs  index.rs  main.rs  resolve.rs  util.rs
src/command/: dump.rs  mod.rs  package.rs
src/command/serve/: error.rs  interface.rs  io.rs  mod.rs  tests.rs
src/command/serve/io/: mock.rs  mod.rs
src/engine/: io.rs  mod.rs  tests.rs
src/serialize/: jsonrpc.rs  mod.rs  version1.rs
src/types/: arbitrary.rs  mod.rs
src/types/path/: absolute.rs  relative.rs
src/vcs/: changes.rs  mod.rs
tests/: cli.rs  server.rs
