[package]
name = "tourist"
version = "0.1.1"
authors = ["Harrison Goldstein <hgoldstein95@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The tourist documentation system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.2", default-features = false }
git2 = "0.9"
dirs = "2.0"
zip = "0.5"
tourist-types = "0.1.0"
tourist-serde = "0.1.1"
