[package]
name = "tourist"
version = "0.1.2"
authors = ["Harrison Goldstein <hgoldstein95@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The tourist documentation system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
assert_cmd = "0.10"
predicates = "1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.2", default-features = false }
git2 = "0.9"
dirs = "2.0"
zip = "0.5"
tempdir = "0.3"
jsonrpc-stdio-server = "12.1"
jsonrpc-derive = "12.1"
jsonrpc-core = "12.1"
jsonrpc-core-client = "12.1"
uuid = { version = "0.7", features = ["v4"] }
failure = "0.1"
dotenv = "0.14"
